Fix white background overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
     color: white;
     position: fixed;
     width: 100%;
+    z-index: 10;
 }
 
 #left-nav {
@@ -138,20 +139,20 @@ ul {
 }
 
 .white-background, .image-card {
-    border-radius: 5px; 
-    
     color: white;
     width: 350px;
     page-break-inside: avoid;
+    margin-bottom: 15px;
 }
 
 .image-card {
     background-color: #474a51; 
     box-shadow: 0 8px 6px -6px black;
+    overflow: hidden;
+    
 }
 
 .white-background {
-    border-radius: 8px; 
     background-color: white;
 }
 
